--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -36,7 +36,7 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="...">
+            <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'images/logo.png' %}" width="32" height="32" alt="">
                 PythonBin
             </a>
@@ -46,8 +46,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="form-inline"><a class="btn btn-outline-secondary" href="">Добавить сниппет</a></li>
-                    <li class="form-inline"><a class="btn btn-outline-info" href="...">Посмотреть
+                    <li class="form-inline"><a class="btn btn-outline-secondary" href="{% url 'add-snippet' %}">Добавить сниппет</a></li>
+                    <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'list-snippets' %}">Посмотреть
                         сниппеты</a></li>
                 </ul>
             </div>
@@ -56,6 +56,7 @@
 </header>
 
 <!-- Begin page content -->
+{% block page_content %}
 <main role="main" class="mt-3 flex-shrink-0">
     <div class="container">
         <div class="row">
@@ -76,7 +77,7 @@
 
         <div class="row mt-3">
             <div class="col-4 offset-4">
-                <a href="" class="btn btn-secondary btn-block">Добавить сниппет</a>
+                <a href="{% url 'add-snippet' %}" class="btn btn-secondary btn-block">Добавить сниппет</a>
             </div>
         </div>
 
@@ -100,6 +101,7 @@
         </div>
     </div>
 </main>
+{% endblock %}
 
 <footer class="footer mt-auto py-3">
     <div class="container">
