--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
 
 <!-- Begin page content -->
 <main role="main" class="mt-3 flex-shrink-0">
-    {% block page_content %}
+    {% block main %}
     {% endblock %}
 </main>
 
