--- a/templates/pages/add_snippet.html
+++ b/templates/pages/add_snippet.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block page_content %}
+{% block main %}
 <div class="container">
     <div class="row">
         <div class="col">
