--- a/templates/pages/page_snippet.html
+++ b/templates/pages/page_snippet.html
@@ -11,11 +11,14 @@
 
     <fieldset disabled>
        <div class="row disabled">
-           <div class="col col-8">
+           <div class="col col-7">
                Название: <input type="text" value="{{ snippet.name }}" class="form-control">
            </div>
-           <div class="col col-4">
-               Дата создания:<input type="text" value="{{ snippet.creation_date }}" class="form-control">
+           <div class="col col-2">
+               Язык: <input type="text" value="{{ snippet.lang }}" class="form-control">
+           </div>
+           <div class="col col-3">
+               Дата создания: <input type="text" value="{{ snippet.creation_date }}" class="form-control">
            </div>
        </div>
        <hr>
