--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
         code {
             font-size: 80%;
         }
+
+
     </style>
 </head>
 
@@ -46,11 +48,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="form-inline"><a class="btn btn-outline-secondary" href="{% url 'add-snippet' %}">Добавить сниппет</a></li>
+                    <li class="form-inline"><a class="btn btn-outline-secondary" href="{% url 'add-snippet' %}">Добавить
+                        сниппет</a></li>
                     <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'list-snippets' %}">Посмотреть
                         сниппеты</a></li>
                 </ul>
             </div>
+            {% if request.user.is_authenticated %}
+            <span style="color: white;">Welcome, {{request.user.username }}!</span>
+            {% else %}
+            <form method="post" action="{% url 'login' %}">{% csrf_token %}
+                <input name="username" type="text" placeholder="username">
+                <input name="password" type="password" placeholder="password">
+                <button type="submit">login</button>
+            </form>
+            {% endif %}
         </div>
     </nav>
 </header>
@@ -69,11 +81,14 @@
 </footer>
 
 <!-- Optional JavaScript -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" crossorigin="anonymous"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" crossorigin="anonymous"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
