--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@
             </div>
             {% if request.user.is_authenticated %}
             <span style="color: white;">Welcome, {{request.user.username }}!</span>
+            <a href="{% url 'logout' %}">Logout</a>
             {% else %}
             <form method="post" action="{% url 'login' %}">{% csrf_token %}
                 <input name="username" type="text" placeholder="username">
