--- a/templates/base.html
+++ b/templates/base.html
@@ -56,13 +56,14 @@
             </div>
             {% if request.user.is_authenticated %}
             <span style="color: white;">Welcome, {{request.user.username }}!</span>
-            <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'logout' %}">SignOut</a>
             {% else %}
             <form method="post" action="{% url 'login' %}">{% csrf_token %}
                 <input name="username" type="text" placeholder="username">
                 <input name="password" type="password" placeholder="password">
-                <button type="submit">login</button>
+                <button type="submit">SignIn</button>
             </form>
+            <a href="{% url 'registration' %}">SignUp</a>
             {% endif %}
         </div>
     </nav>
