--- a/templates/pages/edit_snippet.html
+++ b/templates/pages/edit_snippet.html
@@ -8,33 +8,20 @@
             <hr>
         </div>
     </div>
-
-    <div class="row">
-        <div class="col">
-            <form action="" method="post">
+    <form action="" method="post">
+        <div class="row text-left">
+            <div class="col offset-2">
                 {% csrf_token %}
-                <div class="form-group row">
-                    <div class="col-sm-8">
-                        {{ form.name }}
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-sm-8">
-                        {{ form.lang }}
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col">
-                        {{ form.code }}
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-8">
-                        <input type="submit" class="btn btn-primary btn-block" value="Сохранить">
-                    </div>
-                </div>
-            </form>
+                <table>
+                    {{ form.as_table }}
+                </table>
+            </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-7 offset-2">
+                <input type="submit" class="btn btn-primary btn-block" value="Сохранить">
+            </div>
+        </div>
+    </form>
 </div>
 {% endblock %}
