add snippet deletion

--- a/templates/pages/view_snippets.html
+++ b/templates/pages/view_snippets.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load tz %}
 {% block main %}
 <div class="container">
     <div class="row">
@@ -21,21 +21,28 @@
                         <th scope="col">Дата создания</th>
                         <th scope="col">Язык</th>
                         <th scope="col">Автор</th>
-                        {% if edit %}<th></th>{% endif %}
-                        {% if delete %}<th></th>{% endif %}
+                        {% if edit %}
+                        <th></th>
+                        {% endif %}
+                        {% if delete %}
+                        <th></th>
+                        {% endif %}
                     </tr>
                     </thead>
                     <tbody>
                     {% for snippet in snippets %}
                     <tr>
-                        {% load tz %}
                         <td scope="row">{{ snippet.id }}</td>
                         <td><a href="{% url 'page-snippet' snippet.id %}">{{ snippet.name }}</a></td>
                         <td>{{ snippet.creation_date|timezone:USER_TZ }}</td>
                         <td>{{ snippet.lang }}</td>
                         <td>{{ snippet.user|default:'Неизвестно' }}</td>
-                        {% if edit %}<td><a href="{% url 'edit-snippet' snippet.id %}">M</a></td>{% endif %}
-                        {% if delete %}<td><a href="{# {% url 'delete-snippet' snippet.id %} #}">D</a></td>{% endif %}
+                        {% if edit %}
+                        <td><a href="{% url 'edit-snippet' snippet.id %}">M</a></td>
+                        {% endif %}
+                        {% if delete %}
+                        <td><a href="{% url 'delete-snippet' snippet.id %}">D</a></td>
+                        {% endif %}
                     </tr>
                     {% endfor %}
                     </tbody>
