--- a/templates/pages/page_snippet.html
+++ b/templates/pages/page_snippet.html
@@ -10,31 +10,63 @@
         </div>
     </div>
 
+
     <fieldset disabled>
-       <div class="row disabled">
-           <div class="col col-7">
-               Название: <input type="text" value="{{ snippet.name }}" class="form-control">
-           </div>
-           <div class="col col-2">
-               Язык: <input type="text" value="{{ snippet.lang }}" class="form-control">
-           </div>
-           <div class="col col-3">
-               Дата создания:
-               <input type="text" value="{{ snippet.creation_date|timezone:USER_TZ }}" class="form-control">
-           </div>
-       </div>
-       <hr>
-       <div class="row">
-           <div class="col">
-               <div class="p-2 h-100" style="border:1px solid #ced4da; border-radius:5px;">
-                   <p>
-                       {{ snippet.code }}
-                   </p>
-
-               </div>
-
-           </div>
-       </div>
+        <div class="row disabled">
+            <div class="col col-7">
+                Название: <input type="text" value="{{ snippet.name }}" class="form-control">
+            </div>
+            <div class="col col-2">
+                Язык: <input type="text" value="{{ snippet.lang }}" class="form-control">
+            </div>
+            <div class="col col-3">
+                Дата создания:
+                <input type="text" value="{{ snippet.creation_date|timezone:USER_TZ }}" class="form-control">
+            </div>
+        </div>
     </fieldset>
+    <div class="row">
+        <div class="col">
+            <div class="p-2 h-100" style="border:1px solid #ced4da; border-radius:5px; margin-top:10px;">
+                <p>
+                    {{ snippet.code }}
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            {% if request.user.is_authenticated %}
+            <form action="{% url 'comment-add' %}" method="post">
+                {% csrf_token %}
+                {{ comment_form.text }}
+                <input type="hidden" name="snippet_id" value="{{ snippet.id }}">
+                <button class="btn btn-primary" type="submit">Добавить</button>
+            </form>
+            {% endif %}
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <table class="table table-striped" border="1">
+                {% if comments %}
+                <thead class="thead-dark">
+                <tr>
+                    <th>Автор</th>
+                    <th>Комментарий</th>
+                </tr>
+                {% for comment in comments %}
+                <tr>
+                    <td>{{comment.author.username}}</td>
+                    <td>{{comment.text}}</td>
+                </tr>
+                </thead>
+                {% endfor %}
+                {% endif %}
+        </div>
+    </div>
+    </table>
 </div>
 {% endblock %}
