--- a/templates/pages/view_snippets.html
+++ b/templates/pages/view_snippets.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load tz %}
 {% load static %}
+{% load my_tags %}
 
 {% block main %}
 <div class="container">
@@ -38,7 +39,7 @@
                         <td><a href="{% url 'page-snippet' snippet.id %}">{{ snippet.name }}</a></td>
                         <td>{{ snippet.creation_date|timezone:USER_TZ }}</td>
                         <td>{{ snippet.lang }}</td>
-                        <td>{{ snippet.user|default:'Неизвестно' }}</td>
+                        <td>{{ snippet.user|is_empty:'Неизвестно' }}</td>
                         {% if edit %}
                         <td><a href="{% url 'edit-snippet' snippet.id %}">
                             <img src="{% static 'images/edit.png' %}">
