add snippets list filtering (not the best type of), made some changes in 'edit' and 'delete' buttons display

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
             {% if request.user.is_authenticated %}
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'list-snippets' %}">Посмотреть
+                    <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'list-snippets' %}">Публичные
                         сниппеты</a></li>
                     <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'my-snippets' %}">Мои
                         сниппеты</a></li>
