--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
             {% else %}
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'list-snippets' %}">Посмотреть
+                    <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'list-snippets' %}">Публичные
                         сниппеты</a></li>
                 </ul>
             </div>
